--- a/systemapps/account/templates/loginsignup.html
+++ b/systemapps/account/templates/loginsignup.html
@@ -16,7 +16,7 @@
                         Войти в вашу учетную запись
                     </div>
                     <div class="acc_content clearfix">
-                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'login' %}"
+                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'account:login' %}"
                               method="post">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.GET.next }}">
@@ -34,7 +34,7 @@
                         Новый пользователь? Зарегистрироваться
                     </div>
                     <div class="acc_content clearfix">
-                        <form id="register-form" name="register-form" class="nobottommargin" action="{% url 'login' %}"
+                        <form id="register-form" name="register-form" class="nobottommargin" action="{% url 'account:login' %}"
                               method="post">
                             {% csrf_token %}
                             {% include 'form.html' with form=signup_form %}
