--- a/templates/base.html
+++ b/templates/base.html
@@ -64,27 +64,6 @@
                                 </ul>
                             </li>
 
-                            {% if user.is_staff %}    {# Если пользователь является сотрудником #}
-                                <li><a href="{% url 'home' %}">Администратор</a>
-                                    {% menu adminmenu %}
-                                    <ul>
-                                        {% recursetree nodes %}
-                                            <li>
-                                                <a href="{% url node.url %}" class="{{ node.hrefclass }}">
-                                                    <span class="ts-icon"><i class="{{ node.iconclass }}"></i></span>
-                                                    <span class="ts-text">{{ node.title }}</span>
-                                                </a>
-                                                {% if not node.is_leaf_node %}
-                                                    <ul>
-                                                        {{ children }}
-                                                    </ul>
-                                                {% endif %}
-                                            </li>
-                                        {% endrecursetree %}
-                                    </ul>
-                                </li>
-                            {% endif %}
-
                         {% else %}
 
                             <li><a href="{% url 'account:login' %}">Регистрация</a>
@@ -150,8 +129,8 @@
             <!-- Logo
             ============================================= -->
             <div id="logo">
-                <a href="{% url 'home' %}" class="standard-logo"><img src={% static '/img/logo.png' %} alt="Logo"></a>
-                <a href="{% url 'home' %}" class="retina-logo"><img src={% static '/img/logo@2x.png' %} alt="Logo"></a>
+                <a href="{% url 'home' %}" class="standard-logo"><img alt="Logo" src={% static '/images/logo.png' %}></a>
+                <a href="{% url 'home' %}" class="retina-logo"><img alt="Logo" src={% static '/images/logo@2x.png' %}></a>
             </div><!-- #logo end -->
 
             <ul class="header-extras">
@@ -181,7 +160,7 @@
 
         <div id="header-wrap">
             <!-- Primary Navigation
-         ============================================= -->
+            ============================================= -->
             {% menu mainmenu %}
             <nav id="primary-menu" class="style-2">
                 <div class="container clearfix">
@@ -189,7 +168,7 @@
                     <ul>
                         {% recursetree nodes %}
                             <li>
-                                <a href="{{ node.url }}">
+                                <a href="{% url node.url %}">
                                     <div>{% if node.iconclass != '' %}
                                         <i class="{{ node.iconclass }}"></i>{% endif %}{{ node.title }}</div>
                                 </a>
@@ -202,10 +181,10 @@
                         {% endrecursetree %}
                     </ul>
                     <!-- Top Search
-                 ============================================= -->
+                    ============================================= -->
                     <div id="top-search">
                         <a href="#" id="top-search-trigger"><i class="icon-search3"></i><i class="icon-line-cross"></i></a>
-                        <form action="search.html" method="get">
+                        <form action="#" method="get">
                             <input type="text" name="q" class="form-control" value=""
                                    placeholder="Напечатайте &amp; нажмите Enter..">
                         </form>
@@ -216,11 +195,93 @@
 
     </header><!-- #header end -->
 
+    <!-- Content
+    ============================================= -->
     <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+        <section id="content">
+            <div class="content-wrap">
+                <div class="container clearfix">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
+        </section>
+    </div><!-- #content end -->
 
-</div>
+    <!-- Footer
+    ============================================= -->
+    <footer id="footer" class="dark">
+
+        <div class="container">
+        </div>
+
+        <!-- Copyrights
+        ============================================= -->
+        <div id="copyrights">
+
+            <div class="container clearfix">
+
+                <div class="col_half">
+                    Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.<br>
+                    <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+                </div>
+
+                <div class="col_half col_last tright">
+                    <div class="fright clearfix">
+                        <a href="#" class="social-icon si-small si-borderless si-facebook">
+                            <i class="icon-facebook"></i>
+                            <i class="icon-facebook"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-twitter">
+                            <i class="icon-twitter"></i>
+                            <i class="icon-twitter"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-gplus">
+                            <i class="icon-gplus"></i>
+                            <i class="icon-gplus"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-pinterest">
+                            <i class="icon-pinterest"></i>
+                            <i class="icon-pinterest"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-vimeo">
+                            <i class="icon-vimeo"></i>
+                            <i class="icon-vimeo"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-github">
+                            <i class="icon-github"></i>
+                            <i class="icon-github"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-yahoo">
+                            <i class="icon-yahoo"></i>
+                            <i class="icon-yahoo"></i>
+                        </a>
+
+                        <a href="#" class="social-icon si-small si-borderless si-linkedin">
+                            <i class="icon-linkedin"></i>
+                            <i class="icon-linkedin"></i>
+                        </a>
+                    </div>
+
+                    <div class="clear"></div>
+
+                    <i class="icon-envelope2"></i> info@canvas.com <span class="middot">&middot;</span> <i
+                        class="icon-headphones"></i> +91-11-6541-6369 <span class="middot">&middot;</span> <i
+                        class="icon-skype2"></i> CanvasOnSkype
+                </div>
+
+            </div>
+
+        </div><!-- #copyrights end -->
+
+    </footer><!-- #footer end -->
+
+</div><!-- #wrapper end -->
 
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -234,12 +295,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
         integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
-{% block javascript %}{% endblock %}
 
 <!-- Footer Scripts
 ============================================= -->
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/functions.js' %}"></script>
+{% block javascript %}{% endblock %}
 
 </body>
 
