--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -76,7 +76,7 @@
                                         <tr>
                                             <th>№</th>
                                             <th>Помещение</th>
-                                            <th>Доля собственности</th>
+                                            <th>Доля собственности(%)</th>
                                             <th>Дата запроса</th>
                                             <th>Статус</th>
                                             <th>Удалить</th>
@@ -91,7 +91,7 @@
                                                 <td>{{ item.date_request }}</td>
                                                 {% if item.date_confirmation is None %}
                                                     <td>Запрос на рассмотрении</td>
-                                                    <td>
+                                                    <td class="center">
                                                         <a class="btn btn-secondary btn-sm icon-trash btn-deleteowner"
                                                            href="{% url 'account:deleteowner' %}?owner_id={{ item.id }}"></a>
                                                     </td>
